# PingSIght

./: .gitignore  ACTUAL_FIX_SUMMARY.md  ADMIN_BLOCKING_FIXES.md  ADMIN_FIXES_SUMMARY.md  ANOMALY_TEST_GUIDE.md  ANOMALY_TEST_READY.md  AUTHENTICATION_FIXES.md  AUTO_REFRESH_IMPLEMENTATION.md  BACKEND_STARTUP_GUIDE.md  COMMIT_SUMMARY.md  CORS_FIX.md  CORS_FIX_COMPLETE.md  CRITICAL_BUG_FIXED.md  DEEP_TRACE_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_READINESS.md  DEPLOY_NOW.md  DOMAIN_CHECK_STATUS.md  DOMAIN_EXPIRATION_COMPLETE.md  DOMAIN_TEST_GUIDE.md  ERROR_HANDLING_IMPROVEMENT.md  FIX_VERIFICATION.md  GITHUB_CODE_VERIFICATION.md  GITHUB_VIEWING_GUIDE.md  HEADER_IMPROVEMENTS.md  HEARTBEAT_CHART_FIX.md  HEARTBEAT_URL_DETAIL_PAGE.md  HEARTBEAT_URL_DISPLAY_IMPLEMENTATION.md  HEARTBEAT_URL_USAGE_GUIDE.md  HEARTBEAT_WATCHER_IMPLEMENTATION.md  MAINTENANCE_MODE_COMPLETE.md  MODAL_CLEANUP.md  MODAL_UX_IMPROVEMENTS.md  MODAL_Z_INDEX_FIX.md  MODAL_Z_INDEX_FIX_COMPLETE.md  MONITOR_CREATION_IMPLEMENTATION.md  MONITOR_DETAIL_PAGE_ENHANCEMENTS.md  MONITOR_ENHANCEMENTS.md  MONITOR_MANAGEMENT_IMPLEMENTATION.md  MONITOR_SHARING_FEATURE.md  (+39 more)
backend/: .dockerignore  ADMIN_SETUP.md  ANOMALY_DETECTION_GUIDE.md  ANOMALY_DETECTION_SUMMARY.md  CODEBASE_FLOW_GUIDE.md  DELETE_MONITOR_FIX.md  DOMAIN_EXPIRATION_GUIDE.md  Dockerfile  KEYWORD_VALIDATION_GUIDE.md  KEYWORD_VALIDATION_IMPLEMENTATION.md  KEYWORD_VALIDATION_SUMMARY.md  KEYWORD_VALIDATION_TEST.md  MAINTENANCE_MODE_API.md  MAINTENANCE_MODE_GUIDE.md  SCENARIO_MONITORING_GUIDE.md  SCENARIO_MONITORS.md  SSL_CHECKER_README.md  convert_db_url.py  (+22 more)
(+173 files in other folders)
